🚀feat(frontend): enhance security and optimize build configuration #28
Security improvements:
- Add robots.txt to prevent search engine indexing
- Add meta robots tag (noindex, nofollow) to HTML
- Disable Vue DevTools in production environment
- Disable console output in production to prevent info leakage
- Add X-Requested-With header to prevent CSRF attacks
- Add route guard to prevent logged-in users from accessing login page
- Implement request cancellation for duplicate requests

Performance optimizations:
- Improve code splitting with granular chunks (vue-vendor, element-plus, utils)
- Add structured asset file naming with hash
- Enable CSS code splitting
- Disable build size reporting for faster builds
- Add cleanup logic in useDebounce composable to prevent memory leaks

Developer experience:
- Add .env.example template for environment variables
- Add .gitattributes for consistent line endings
- Enhance ESLint rules for production environment
- Add build:analyze and lint:check npm scripts

--- a/web/vue/package.json
+++ b/web/vue/package.json
@@ -8,8 +8,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build --mode analyze",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js --fix",
+    "lint:check": "eslint . --ext .vue,.js",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
